syntax="proto3";

package mq;

enum Status
{
    s_ok = 0;
    s_notok = 1;
}

enum ServerStatus
{
    ss_running = 0;
    ss_unresponsive = 1;
}
